--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-about: Suggest new features for the API
+description: Suggest new features for the API
 title: '[FEATURE]: '
 labels: ['feature request']
 body:
